# lazydb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP-v2.md  ROADMAP.md  SPEC.md  deny.toml  lazydb.rb
.github/workflows/: ci.yml  release.yml
src/: app.rs  autocomplete.rs  config.rs  editor.rs  filter.rs  highlight.rs  log.rs  main.rs  shortcuts.rs  theme.rs  ui.rs
src/app/: job.rs  mod.rs  tests.rs  types.rs  util.rs
src/db/: mod.rs  mssql.rs  mysql.rs  postgres.rs  sql.rs  sqlite.rs  ssh.rs
src/ui/: bar.rs  mod.rs  overlay.rs  pane.rs  table.rs
