[package]
name = "lazydb"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = []
ssl = ["dep:postgres-native-tls", "dep:native-tls"]
keychain = ["dep:keyring"]
mssql = ["dep:tiberius", "dep:tokio", "dep:tokio-util"]

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
mysql = { version = "25", default-features = false, features = ["minimal-rust"] }
postgres = { version = "0.19", default-features = false }
postgres-native-tls = { version = "0.5", optional = true }
native-tls = { version = "0.2", optional = true }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
neo_frizbee = "0.10"
sqlformat = "0.5"
arboard = "3.4"
keyring = { version = "3", optional = true }
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73"], optional = true }
tokio = { version = "1", features = ["rt", "macros", "net"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }

[lints.clippy]
all = { level = "deny", priority = -1 }
