[package]
name = "lazydb"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A minimal lazygit-style TUI for databases — MySQL, PostgreSQL, SQLite, MSSQL"
keywords = ["database", "tui", "terminal", "mysql", "postgresql"]
categories = ["command-line-utilities", "database"]
repository = "https://github.com/lukasrakauskas/lazydb"
homepage = "https://github.com/lukasrakauskas/lazydb"
rust-version = "1.85"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
mysql = { version = "25", default-features = false, features = ["minimal-rust"] }
postgres = { version = "0.19", default-features = false }
postgres-native-tls = "0.5"
native-tls = "0.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
neo_frizbee = "0.10"
sqlformat = "0.5"
arboard = "3.4"
keyring = "3"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73"] }
tokio = { version = "1", features = ["rt", "macros", "net"] }
tokio-util = { version = "0.7", features = ["compat"] }

[lints.clippy]
all = { level = "deny", priority = -1 }
