[package]
name = "lazydb"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = []
ssl = ["dep:postgres-native-tls", "dep:native-tls"]

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
mysql = { version = "25", default-features = false, features = ["minimal-rust", "rustls-tls"] }
postgres = { version = "0.19", default-features = false }
postgres-native-tls = { version = "0.5", optional = true }
native-tls = { version = "0.2", optional = true }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
neo_frizbee = "0.10"
sqlformat = "0.5"
arboard = "3.4"

[lints.clippy]
all = { level = "deny", priority = -1 }
